Add CI workflows and update Dependabot config
- Add npm package ecosystem to Dependabot config
- Add CI workflow for tests, linter and build
- Add sync workflow for dependencies branch
- Add MIT license
- Update gitignore for build artifacts

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,8 @@
 
 version: 2
 updates:
-  - package-ecosystem: "cargo" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "cargo"
+    directory: "/"
     schedule:
       interval: "weekly"
     assignees:
@@ -14,5 +14,24 @@ updates:
     labels:
       - "dependencies"
       - "bot"
+      - "cargo"
     target-branch: "dependencies"
     open-pull-requests-limit: 5
+
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    assignees:
+      - "nerjs"
+    labels:
+      - "dependencies"
+      - "bot"
+      - "npm"
+    target-branch: "dependencies"
+    open-pull-requests-limit: 5
+    groups:
+      tailwindcss:
+        patterns:
+          - "@tailwindcss/cli"
+          - "tailwindcss"
