--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.3", features = ["desktop", "asset"] }
-
-
-# Debug
 dioxus-logger = "0.5.1"
+futures-util = "0.3.31"
+thiserror = "2.0.12"
+tokio = { version = "1.44.2", features = ["full", "time"] }
 
 [profile]
 
