--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.97"
 dioxus = { version = "0.6.3", features = ["desktop", "asset"] }
 dioxus-logger = "0.5.1"
 futures-util = "0.3.31"
-thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full", "time"] }
 
 [profile]
