--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.97"
 dioxus = { version = "0.6.3", features = ["desktop", "asset"] }
+dioxus-free-icons = { version = "0.9.0", features = ["bootstrap", "font-awesome-regular", "ionicons", "material-design-icons-navigation"] }
 dioxus-logger = "0.5.1"
 futures-util = "0.3.31"
 tokio = { version = "1.44.2", features = ["full", "time"] }
